--- a/package.json
+++ b/package.json
@@ -43,14 +43,24 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.19.0",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-modernizr-loader": "^5.0.0"
   },
   "dependencies": {
+    "@material/button": "^10.0.0",
     "@material/icon-button": "^10.0.0",
     "@material/layout-grid": "^10.0.0",
+    "@material/list": "^10.0.0",
+    "@material/menu": "^10.0.0",
+    "@material/ripple": "^10.0.0",
+    "@material/theme": "^10.0.0",
     "@material/top-app-bar": "^10.0.0",
-    "normalize.css": "^8.0.1"
+    "modernizr": "^3.11.4",
+    "normalize.css": "^8.0.1",
+    "svg-url-loader": "^7.1.1"
   }
 }
